--- a/aeb_plus_simulation/debug_test/debug_test.vcxproj
+++ b/aeb_plus_simulation/debug_test/debug_test.vcxproj
@@ -105,7 +105,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\Code\AEB_plus\functions\pre_processor\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Code\feature_AEB_demo\functions\pre_processor\include;D:\Code\feature_AEB_demo\common_tools;D:\Code\feature_AEB_demo\common_types;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
